--- a/css/main.css
+++ b/css/main.css
@@ -22,6 +22,7 @@ body {
   align-items: center;
   transition: 2s;
   flex-direction: column;
+  
 }
 
 .input-add {
@@ -77,7 +78,9 @@ body {
   width: 400px;
   font-family: "Roboto", sans-serif;
   font-weight: 100;
+
 }
+
 
 ul {
   list-style-type: none;
@@ -114,6 +117,7 @@ button:hover {
 @media (max-width: 992px) {
   .input-add {
     width: 300px;
+    font-size: 17px;
   }
 }
 
@@ -121,4 +125,12 @@ button:hover {
   .tasks {
     width: 300px;
   }
+}
+
+.delete{
+  z-index: 1;
+}
+
+.completed{
+  text-decoration: line-through;
 }
